--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Kotlin</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+    <string name="number_of_seats">Number Of Seats</string>
+    <string name="destination">Destination</string>
+    <string name="end_time">End Time</string>
+    <string name="start_time">Start Time</string>
+    <string name="phone_number">Phone number</string>
+    <string name="email">Email</string>
+    <string name="full_name">Full Name</string>
 </resources>
