--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="thank_you_for_your_payment">Thank you for your payment.</string>
     <string name="print_pdf">Print PDF</string>
     <string name="check_symbol">check symbol</string>
+
+    <string name="facebook_app_id">3289091274734889</string>
+    <string name="fb_login_protocol_scheme">fb3289091274734889</string>
+    <string name="facebook_client_token">56789</string>
+
+
 </resources>
