--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="print_pdf">Print PDF</string>
     <string name="check_symbol">check symbol</string>
     <string name="book">Book</string>
+    <string name="delete_blog">Delete Blog</string>
 </resources>
