--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,10 @@
     <string name="enter_title_here">Enter title here</string>
     <string name="title">Title</string>
     <string name="enter_thumbnail_here">Enter thumbnail here</string>
+    <string name="this_is_logout_button">this is logout button</string>
+    <string name="log_out">Log out</string>
+    <string name="add_blog">Add Blog</string>
+    <string name="blog_management">Blog Management</string>
+    <string name="prev">Prev</string>
+    <string name="next">Next</string>
 </resources>
