refactor: fix booking form flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="fb_login_protocol_scheme">fb774759947319259</string>
     <string name="facebook_client_token">56789</string>
 
-
+    <string name="thong_tin_xe"><u>Thông tin xe</u></string>
     <string name="book">Book</string>
     <string name="delete_blog">Delete Blog</string>
     <string name="thumbnail">Thumbnail</string>
