--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
 
     <!--    New -->
     <string name="login_home"><u>Đăng nhập</u></string>
+    <string name="logup"><u>Đăng ký</u></string>
 </resources>
