--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <!--    New -->
     <string name="login_home"><u>Đăng nhập</u></string>
     <string name="logup"><u>Đăng ký</u></string>
+    <string name="close"><u>Đóng</u></string>
 </resources>
